remove dev tools and fix IP address is too long to display error

--- a/show_ip.css
+++ b/show_ip.css
@@ -1,6 +1,6 @@
 .show_left {
     max-height: 31px;
-    max-width: 180px;
+    max-width: 400px;
     padding: 2px 10px;
     margin: 5px;
     background: rgba(0, 0, 0, 0.5);
@@ -18,7 +18,7 @@
 
 .show_right {
     max-height: 31px;
-    max-width: 180px;
+    max-width: 400px;
     padding: 2px 10px;
     margin: 5px;
     background: rgba(0, 0, 0, 0.5);
